Move from C/C++ target to D